force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a physician&apos;s address.</description>
    <label>Physician Address</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (Physician Address)</relationshipLabel>
    <relationshipName>Fulfillment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>