force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Address_Line_2__c</fullName>
    <description>Text field used to stamp a physician&apos;s primary address line 2 (stored on their address contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>