force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_DEA__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_DEA__c</fullName>
    <description>Text field used to stamp a physician&apos;s DEA (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician DEA</label>
    <length>9</length>
    <type>Text</type>
</CustomField>