force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Email__c</fullName>
    <description>Email field used to stamp a physician&apos;s primary email address (stored on their email contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Email</label>
    <type>Email</type>
</CustomField>