force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Fax__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Fax__c</fullName>
    <description>Phone field used to stamp a physician&apos;s primary fax number (stored on their fax contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Fax</label>
    <type>Phone</type>
</CustomField>