force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_First_Name__c</fullName>
    <description>Text field used to stamp the first name of the physician related to a patient&apos;s care plan.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>