force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Institution_Name__c</fullName>
    <description>HCO for the Physician --&gt; PHYSICIAN_FACILITY_NAME.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Institution Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>