force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Middle_Name__c</fullName>
    <description>Middle Name from Physician Account --&gt; PHYSICIAN_MIDDLE_INITIAL.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>