force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Notes__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Notes__c</fullName>
    <description>Notes from Physician Account --&gt; DOCTOR_NOTES.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Notes</label>
    <type>TextArea</type>
</CustomField>