force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_NPI__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_NPI__c</fullName>
    <description>Text field used to stamp a physician&apos;s NPI (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>