force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Phone__c</fullName>
    <description>Phone field used to stamp a physician&apos;s primary phone number (stored on their phone contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Phone</label>
    <type>Phone</type>
</CustomField>