force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Postal_Code__c</fullName>
    <description>Text field used to stamp a physician&apos;s primary address postal code (stored on their address contact information record when that record is set as primary).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>