force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Professional_Designation__c</fullName>
    <description>Text field used to stamp a physician&apos;s professional designation (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Professional Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>