force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Signature__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Signature__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary prescription physician signature value (related to the primary prescription stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Signature</label>
    <length>10</length>
    <type>Text</type>
</CustomField>