force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Signature_Date__c</fullName>
    <description>Date field used to stamp a patient&apos;s primary prescription physician signature date (related to the primary prescription stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Signature Date</label>
    <type>Date</type>
</CustomField>