force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_SLN__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_SLN__c</fullName>
    <description>Text field used to stamp a physician&apos;s SLN (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician SLN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>