force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Specialty__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Specialty__c</fullName>
    <description>Text field used to stamp a physician&apos;s specialty (stored on their account record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Specialty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>