force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Visit_Outcome__c</fullName>
    <description>Physician_VISIT_OUTCOME (Ashfield response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Visit Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>