force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Physician_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Zip_Code__c</fullName>
    <description>Zip Code from Physician&apos;s Primary Address --&gt; PHYSICIAN_ZIP_CODE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>