force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Prescription__c.field-meta.xml
<CustomField>
    <fullName>PJN_Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the patient&apos;s prescription the be used for a fulfillment request.</description>
    <label>Prescription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HealthCloudGA__EhrMedicationPrescription__c.PJN_Care_Plan__c</field>
            <operation>equals</operation>
            <valueField>$Source.PJN_Care_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
    <relationshipLabel>Fulfillment Requests</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>