force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Prescription_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Prescription_Number__c</fullName>
    <description>Text(100) Prescription Number, field used for PEP to SP - Data Mapping,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prescription Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>