force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Copay__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Copay__c</fullName>
    <description>Copay from Primary Coverage --&gt; PRIMARY_COPAY,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Copay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>