force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Deductible__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Deductible__c</fullName>
    <description>Deductible from Primary Coverage --&gt; PRIMARY_DEDUCTIBLE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Deductible</label>
    <length>100</length>
    <type>Text</type>
</CustomField>