force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Group_Number__c</fullName>
    <description>Group Number from Primary Coverage --&gt; PRIMARY_GROUP,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>