force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Code__c</fullName>
    <description>Primary PA Code --&gt; PRIMARY_PA_CODE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>