force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Denial_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Denial_Reason_Other__c</fullName>
    <description>- Denial Reasons (Other) from Primary Coverage&apos;s Prior Authorization --&gt; PRIMARY_PA_DENIAL_REASON_OTHER,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Denial Reason Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>