force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Denial_Reason_Specialist__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Denial_Reason_Specialist__c</fullName>
    <description>Denial Reasons from Primary Coverage&apos;s Prior Authorization --&gt; PRIMARY_PA_DENIAL_REASON_SPECIALIST_RX,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Denial Reason Specialist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>