force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Expiration_Date__c</fullName>
    <description>Expiration Date from Primary Coverage&apos;s Prior Authorization --&gt; PRIMARY_PA_EXPIRATION_DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Expiration Date</label>
    <type>Date</type>
</CustomField>