force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Required__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Required__c</fullName>
    <description>PA Required from Primary Coverage --&gt; PRIMARY_PA_REQUIRED,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>