force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Requires_Lab_Results__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Requires_Lab_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary PA Requires Lab Results --&gt; PRIMARY_PA_REQUIRES_LAB_RESULTS,</description>
    <label>Primary PA Requires Lab Results</label>
    <type>Checkbox</type>
</CustomField>