force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Requires_LMN__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Requires_LMN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary PA Requires Letter of Medical Necessity  --&gt; PRIMARY_PA_REQUIRES_LMN,</description>
    <label>Primary PA Requires LMN</label>
    <type>Checkbox</type>
</CustomField>