force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Requires_Other__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Requires_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary PA Requires Other--&gt; PRIMARY_PA_REQUIRES_OTHER,</description>
    <label>Primary PA Requires Other</label>
    <type>Checkbox</type>
</CustomField>