force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Requires_Radiographic__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Requires_Radiographic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary PA Requires Radiographic Results --&gt; PRIMARY_PA_REQUIRES_RADIOGRAPHIC_RESULTS,</description>
    <label>Primary PA Requires Radiographic</label>
    <type>Checkbox</type>
</CustomField>