force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Requires_Specialst__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Requires_Specialst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary PA Requires Specialst --&gt; PRIMARY_PA_REQUIRES_SPECIALIST_RX,</description>
    <label>Primary PA Requires Specialst</label>
    <type>Checkbox</type>
</CustomField>