force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Requires_Step_Edit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Requires_Step_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary PA Requires Step Edit --&gt; PRIMARY_PA_REQUIRES_STEPEDIT,</description>
    <label>Primary PA Requires Step Edit</label>
    <type>Checkbox</type>
</CustomField>