force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Start_Date__c</fullName>
    <description>Start Date from Primary Coverage&apos;s Prior Authorization --&gt; PRIMARY_PA_START_DATE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Start Date</label>
    <type>Date</type>
</CustomField>