force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_PA_Type_Level__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_PA_Type_Level__c</fullName>
    <description>Primary PA Type Level --&gt; PRIMARY_PA_TYPE_LEVEL,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PA Type Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>