force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Payer_Name__c</fullName>
    <description>Text(255) field used to store Primary Payer Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>