force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Payer_Type__c</fullName>
    <description>Type from Primary Coverage&apos;s Payer Account --&gt; PRIMARY_PAYER_TYPE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>