force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Plan_Name__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary active member plan name (related to the primary active member plan stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>