force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Plan_PBM__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Plan_PBM__c</fullName>
    <description>PBM from Primary Coverage&apos;s Payer Plan --&gt; PRIMARY_PLAN_PBM.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Plan PBM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>