force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Primary_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Plan_Type__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary active member plan type (related to the primary active member plan stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Plan Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>