force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Product__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product__c</fullName>
    <description>Text field used to stamp a patient&apos;s primary prescription product (related to the primary prescription stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>