force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product_Description__c</fullName>
    <description>Name from Prescription&apos;s Product --&gt; PRODUCT_DESCRIPTION.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>