force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Program_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_DeveloperName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>