force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Reason_For_Dose_Not_Administered__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reason_For_Dose_Not_Administered__c</fullName>
    <description>REASON_FOR_DOSE_NOT_ADMINISTERED (Ashfield response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason For Dose Not Administered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>