force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type_Name__c</fullName>
    <description>Formula to return the record type name of the fulfillment request, used to display in the patient timeline.</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>