force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Referral_Type__c</fullName>
    <description>Referral Type from Care Plan --&gt; REFERRAL_TYPE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>