force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Request_Date__c</fullName>
    <description>Created Date from Fulfillment Request --&gt; REQUEST_DATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>