force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Request_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PJN_Request_Quantity__c</fullName>
    <description>Number field for Quantity, used in PEP to CCG - Data Mapping.</description>
    <label>Request Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>