force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>PJN_Request_Time__c</fullName>
    <description>- Created Date/Time from Fulfillment Request --&gt; REQUEST_TIME,</description>
    <label>Request Time</label>
    <type>Time</type>
</CustomField>