force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Request_Type__c</fullName>
    <description>Request Type from Fulfillment Request --&gt; REQUEST_TYPE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>