force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Scheduled_Date__c</fullName>
    <description>SCHEDULED_DATE(Ashfield Response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>