force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_BIN__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_BIN__c</fullName>
    <description>Text field used to stamp a patient&apos;s secondary active member plan BIN (related to the secondary active member plan stored on their care plan record).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>