force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_Copay__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Copay__c</fullName>
    <description>Copay from Secondary Coverage --&gt; SECONDARY_COPAY,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Copay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>