force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_Deductible__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Deductible__c</fullName>
    <description>Deductible from Secondary Coverage --&gt; SECONDARY_DEDUCTIBLE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Deductible</label>
    <length>100</length>
    <type>Text</type>
</CustomField>