force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Group_Number__c</fullName>
    <description>Group Number from Secondary Coverage --&gt; SECONDARY_GROUP,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>