force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_Insurance_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_Insurance_ID__c</fullName>
    <description>Text field used to stamp a patient&apos;s secondary active member plan insurance ID (related to the secondary active member plan stored on their care plan record).</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Secondary Insurance ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>