force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_PA_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_PA_Code__c</fullName>
    <description>Secondary PA Code --&gt; SECONDARY_PA_CODE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary PA Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>