force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Secondary_PA_Denial_Radiographic__c.field-meta.xml
<CustomField>
    <fullName>PJN_Secondary_PA_Denial_Radiographic__c</fullName>
    <description>Denial Reasons from Secondary Coverage&apos;s Prior Authorization --&gt; SECONDARY_PA_DENIAL_RADIOGRAPHIC_RESULTS,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary PA Denial Reason Radiographic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>